syntax = "proto3";

import "google/protobuf/timestamp.proto";

package contract.v1;

message Events {
    repeated Assign assigns = 1;
    repeated PunkBidEntered punk_bid_entereds = 2;
    repeated PunkBidWithdrawn punk_bid_withdrawns = 3;
    repeated PunkBought punk_boughts = 4;
    repeated PunkNoLongerForSale punk_no_longer_for_sales = 5;
    repeated PunkOffered punk_offereds = 6;
    repeated PunkTransfer punk_transfers = 7;
    repeated Transfer transfers = 8;
}

message Assign {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes to = 5;
    string punk_index = 6;
}

message PunkBidEntered {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string punk_index = 5;
    string value = 6;
    bytes from_address = 7;
}

message PunkBidWithdrawn {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string punk_index = 5;
    string value = 6;
    bytes from_address = 7;
}

message PunkBought {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string punk_index = 5;
    string value = 6;
    bytes from_address = 7;
    bytes to_address = 8;
}

message PunkNoLongerForSale {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string punk_index = 5;
}

message PunkOffered {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string punk_index = 5;
    string min_value = 6;
    bytes to_address = 7;
}

message PunkTransfer {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes from = 5;
    bytes to = 6;
    string punk_index = 7;
}

message Transfer {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes from = 5;
    bytes to = 6;
    string value = 7;
}
